<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.MainActivity">

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Hello World!"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!-- TODO save all dimenations in dimen and use it, -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginBottom="@dimen/zero_dp"
        android:layout_marginEnd="@dimen/zero_dp"
        android:layout_marginStart="@dimen/zero_dp"
        android:layout_marginTop="@dimen/zero_dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/welcomescreenbg"
        android:contentDescription="@string/background_image" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginEnd="@dimen/eight_dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/swooshlogo"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/main_text_view_layout_height"
        android:layout_marginBottom="@dimen/zero_dp"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/main_text_view_margin_top"
        android:text="@string/go_all_in"
        android:textColor="@android:color/white"
        android:textSize="@dimen/main_text_view_text_size"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/on_going_all_in"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/main_text_view3_width"
        android:layout_height="@dimen/main_text_view3_height"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/main_text_view3_margin_top"
        android:singleLine="false"
        android:text="@string/find_a_team_in_your_city_and_dominate_the_league"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/getStartedBtn"
        android:layout_width="@dimen/main_started_btn_width"
        android:layout_height="@dimen/main_started_btn_height"
        android:background="@drawable/swoosh_button"
        android:text="@string/get_started"
        android:textColor="@android:color/white"
        android:textSize="@dimen/main_started_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/swoosh_button" />

</androidx.constraintlayout.widget.ConstraintLayout>